      than lists in Python 3.
    - Use chr rather than unichr in Python 3.
    - Use six.string_types rather than types.StringTypes.
    - Pass a byte string to Gtk.CssProvider.load_from_data.
    - Replace all calls to unicode() with calls to six.text_type() or
      misc.utf8() as appropriate.
    - Use unicode_literals in ubiquity.keyboard_names.
  * Add Burmese translations.
  * Remove obsolete uxlaunch handling, since it's no longer used and has
    been removed from the archive.
  * Avoid locking failures when clicking on the "update this installer" link
    more than once.
  * Move a bit more code into ubiquity.install_misc, including a new
    target_file helper method.

  [ Stéphane Graber ]
  * Spawn dconf-service from ubiquity-dm and drop all the dbus-launch calls.
    This should ensure we have a single dconf-service running and that gets
    killed on ubiquity's exit.
  * ubiquity-dm: Turn on the compositor in metacity. (LP: #987168)
  * wallpaper: Update code to properly set the wallpaper when compositing
    is enabled.

 -- Stéphane Graber <stgraber@ubuntu.com>  Mon, 30 Apr 2012 10:51:23 +0200

ubiquity (2.10.16) precise-proposed; urgency=low

  [ Steve Langasek ]
  * If we can't figure out the target user's uid/gid, don't copy the photo
    to the user's home directory.  Addresses the immediate symptom of bug
    #947738, if not the root cause.

  [ Colin Watson ]
  * Automatic update of included source packages: apt-setup 1:0.55ubuntu4,
    console-setup 1.70ubuntu5.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 20 Apr 2012 15:21:46 +0100

ubiquity (2.10.15) precise-proposed; urgency=low

  * Fix crash when attempting to update the installer and a language isn't
    selected for some reason (LP: #985368).
  * Automatic update of included source packages: partman-target 77ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 19 Apr 2012 12:44:17 +0100

ubiquity (2.10.14) precise-proposed; urgency=low

  [ Colin Watson ]